2005-01-01 02:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/GNUmakefile: Added new headers and new .m file.
	* GormLib/IBCellAdditions.h: Added include for NSCell.h
	* GormLib/IBDocuments.h: Added documentation.
	* GormLib/IBDocuments.m: Added include of IBDocuments.h to get
	string declarations.
	* GormLib/IBPalette.m: Implemented IBPaletteDocument.
	* GormLib/IBProjectFiles.h: New
	* GormLib/IBProjects.h: New
	* GormLib/IBResourceManager.[hm]: New
	* GormLib/InterfaceBuilder.h: Added new headers.

2004-12-31 14:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSWindowInspector.gorm: Added form
	to allow setting of the miniaturized image by name.
	* Palettes/1Windows/main.m: Changes to use the form added to the
	UI.

2004-12-31 08:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.h: Added GormFilesOwner to @class declaration.
	* Gorm.m: Made rect drawn around objects thinner to prevent
	residual lines from remaining when the rect is erased.
	* Palettes/1Windows/main.m: Simplified includes.

2004-12-28 21:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageEditor.m: Added check to see if object responds
	to setImage: in performDragOperation.
	* GormImage.m: Moved NSImage category dec/def here.
	* GormPrivate.h: Removed NSImage category declaration.
	* GormViewEditor.m: Removed NSImage category definition.

2004-12-28 16:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPalettesManager.m: Enhancment in loadPalette: to allow
	loading using either the plist or the strings format for 
	palette.table.

2004-12-28 12:10 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Initialize the miniaturized
	window image to nil.

2004-12-28 08:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Improvement on previous
	correction.
